DarkRP 2.4.2 SVN
[ADD] AFK NPC
[ADD] Signing of letters
[ADD] Proplympics! Prop surf games :D
[CHANGE] People need to be alive in order to be able to wanted/warrant
[CHANGE] Updated Notifies to work better with the newer ones
[CHANGE] Optimized setname
[CHANGE] Remade HUD

DarkRP 2.4.2
[CHANGE Drakehawke] Fixed the default GMod admin cleanup from unowning/resetting doors.
[ADD Drakehawke] Dynamic mic chat - if enabled (rp_voiceradius_dynamic), only players in the same room as you can hear your mic (rp_voiceradius must be 1).
[ADD Drakehawke] AFK module
[ADD] Extra animations! (use key swep!)
[ADD] Group ownable doors
[ADD] rp_startingmoney
[ADD] rp_copscanunweld
[ADD] rp_droppocketondeath toggle dropping items in pocket
[ADD] rp_allowvehicleowning Allow vehicles to be owned
[ADD] Support for multiple models. It still works the old way, don't worry
[ADD] Reason for warrant and wanted
[ADD] Rp_vote, vote with a keybind! bind a key to rp_vote 1 and rp_vote 0 to vote yes or no without clicking!
[ADD] Lockdown stops when mayor changes job or leaves server
[ADD] rp_DeathPOV: Enable/disable whether people see their death in first person view
[ADD] rp_respawninjail - Enable/disable whether people can respawn in jail when they die (default on)
[ADD] /911 and /report: Call 911 when you're being attacked and call /report when you see an illegal entity!
[ADD] rp_enablebuyhealth
[ADD] rp_npcarrest
[ADD] /broadcast for mayors
[ADD] Custom agenda's
[ADD] Police agenda
[ADD] Animations for several things!
[ADD] Possibility to give unownable door a title in the keys menu
[ADD] maximum to /price. Set maximum with rp_pricecap
[ADD] /unownalldoors, sell all your doors at once!
[ADD] rp_droppocketonarrest, drop pocket items on arrest.
[ADD] Showing whether someone has a gunlicense above their heads
[ADD] MySQL support!
[ADD] Support for 3D voice chat!
[ADD] rp_adminvehicles and rp_adminnpc, restrict vehicles and NPC's!
[ADD] rp_pricemin, set minimum price of entities.