@@ -1,0 +1,8 @@
+ENT.Type = "anim"
+ENT.Base = "base_gmodentity"
+ENT.PrintName = "DarkRP Laws"
+ENT.Instructions = "Use /addlaws to add a custom law, /removelaw <num> to remove a law."
+ENT.Author = "Drakehawke"
+
+ENT.Spawnable = false
+ENT.AdminSpawnable = false
