@@ -413,6 +413,9 @@ AddHelpLabel(-1, HELP_CATEGORY_ADMINCMD, "rp_pricecap <Number> - The maximum pri
 AddValueCommand("rp_pricemin", "pricemin", 50)
 AddHelpLabel(-1, HELP_CATEGORY_ADMINCMD, "rp_pricemin <Number> - The minimum price of items (using /price)")
 
+AddValueCommand("rp_maxlawboards", "maxlawboards", 2)
+AddHelpLabel(-1, HELP_CATEGORY_ADMINCMD, "rp_maxlawboards <Number> - The maximum number of law boards the mayor can place." )
+
 
 function AddEntityCommands(name, command, max, price)
 	local cmdname = string.gsub(command, " ", "_")
